implementação dos endpoints de transaction
